# OxiSynth

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: chorus.rs  conv.rs  error.rs  lib.rs  midi_event.rs  reverb.rs  soundfont.rs  synth.rs  tuning.rs  utils.rs
core/src/chorus/: public.rs
core/src/reverb/: public.rs
core/src/soundfont/: instrument.rs  loader.rs  preset.rs  sample.rs  sample_data.rs
core/src/synth/: bank.rs  channel.rs  channel_pool.rs  font_bank.rs  generator.rs  modulator.rs  soundfont.rs  voice_pool.rs
core/src/synth/channel_pool/: channel.rs
core/src/synth/internal/: gen.rs  midi.rs  mod.rs
core/src/synth/public/: font.rs  gen.rs  midi.rs  params.rs  tuning.rs  write.rs
core/src/synth/soundfont/: generator.rs  instrument.rs  preset.rs  sample.rs
core/src/synth/voice_pool/: voice.rs
examples/: bench.rs  multi_font.rs  polyphony.rs  riff_sf2.rs  sf2.rs  sf2_tests.rs  simple.rs
examples/real-time/: Cargo.toml
examples/real-time/src/: main.rs
examples/wasm/: Cargo.toml  index.html  index.js  package-lock.json
examples/wasm/src/: lib.rs
oxisynth/: Cargo.toml
oxisynth-chorus/: Cargo.toml
oxisynth-chorus/src/: lib.rs
oxisynth-reverb/: Cargo.toml
oxisynth-reverb/src/: lib.rs
oxisynth/examples/: multi_font.rs  sf2.rs  simple.rs
oxisynth/examples/real-time/src/: main.rs
oxisynth/examples/wasm/: Cargo.toml  index.html  package-lock.json  package.json  webpack.config.js
oxisynth/examples/wasm/src/: lib.rs
oxisynth/src/: arena.rs  error.rs  lib.rs  midi_event.rs  settings.rs  synth.rs  tuning.rs  unsafe_stuff.rs
oxisynth/src/api/: font.rs  midi.rs  mod.rs  settings.rs  tuning.rs  write.rs
oxisynth/src/core/: conv.rs  font_bank.rs  midi.rs  mod.rs  settings.rs  soundfont.rs  voice_pool.rs  write.rs
oxisynth/src/core/channel_pool/: channel.rs  mod.rs
oxisynth/src/core/soundfont/: generator.rs  instrument.rs  mod.rs  modulator.rs  preset.rs  sample.rs  sample_data.rs
oxisynth/src/core/voice_pool/: mod.rs  voice.rs
oxisynth/src/core/voice_pool/voice/: dsp_float.rs  mod.rs
oxisynth/src/core/write/: i16_write.rs  mod.rs
oxisynth/src/synth/: font.rs  midi.rs  params.rs  write.rs
sf2/: Cargo.toml  LICENSE
sf2/src/: hydra.rs  info.rs  lib.rs  reader.rs  sample_data.rs  utils.rs
sf2/src/data/: hydra.rs  info.rs  mod.rs  utils.rs
sf2/src/data/hydra/: generator.rs  modulator.rs  preset.rs  sample.rs
sf2/src/hydra/: bag.rs  generator.rs  instrument.rs  modulator.rs  preset.rs  sample.rs
soundfont-rs/: Cargo.toml  README.md
soundfont-rs/examples/: sf2.rs
soundfont-rs/src/: error.rs  lib.rs  riff.rs
soundfont-rs/src/data/: hydra.rs  info.rs  mod.rs  sample_data.rs  utils.rs
soundfont-rs/src/data/hydra/: bag.rs  generator.rs  instrument.rs  modulator.rs  preset.rs  sample.rs
soundfont-rs/src/raw/: hydra.rs  info.rs  mod.rs  sample_data.rs  utils.rs
soundfont-rs/src/raw/hydra/: bag.rs  generator.rs  instrument.rs  modulator.rs  preset.rs  sample.rs
src/: arena.rs  engine.rs  font.rs  lib.rs  loader.rs  midi_event.rs  private.rs  range_check.rs  settings.rs  synth.rs  types.rs
src/chorus/: mod.rs  public.rs
src/core/: error.rs  midi.rs  midi_event.rs  mod.rs  reverb.rs  settings.rs  soundfont.rs  synth.rs  tuning.rs  utils.rs  voice_pool.rs
src/core/chorus/: public.rs
src/core/soundfont/: instrument.rs  modulator.rs  preset.rs  sample.rs  sample_data.rs
src/core/synth/: channel_pool.rs  font_bank.rs  midi.rs  public.rs  soundfont.rs  voice_pool.rs  write.rs
src/core/synth/channel_pool/: channel.rs
src/core/synth/internal/: gen.rs  midi.rs
src/core/synth/public/: count.rs  font.rs  gen.rs  midi.rs  params.rs  tuning.rs  write.rs
src/core/synth/soundfont/: generator.rs  instrument.rs  modulator.rs  preset.rs  sample.rs
src/core/synth/voice_pool/: voice.rs
src/core/synth/voice_pool/voice/: dsp_float.rs  envelope.rs
src/core/voice_pool/: voice.rs
src/engine/: chorus.rs  settings.rs  soundfont.rs  synth.rs
src/reverb/: mod.rs
src/synth/: chorus.rs  count.rs  font.rs  gen.rs  loader.rs  midi.rs  misc.rs  params.rs  reverb.rs  tuning.rs  write.rs
testdata/: Boomwhacker.sf2
tests/: bench.rs.old
unoxidized/: Cargo.toml  README.md
unoxidized/src/: channel.rs  chorus.rs  conv.rs  dsp_float.rs  fileapi.rs  gen.rs  lib.rs  modulator.rs  reverb.rs  settings.rs  sfloader.rs  soundfont.rs  synth.rs  tuning.rs  voice.rs  voice_pool.rs
unoxidized/src/chorus/: public.rs
unoxidized/src/reverb/: public.rs
unoxidized/src/sfloader/: fileapi.rs
unoxidized/src/soundfont/: loader.rs  sfloader.rs
unoxidized/src/synth/: channel.rs  chorus.rs  count.rs  font.rs  gen.rs  midi.rs  misc.rs  modulator.rs  params.rs  reverb.rs  soundfont.rs  tuning.rs  voice_pool.rs  write.rs
unoxidized/src/synth/public/: count.rs  font.rs  gen.rs  midi.rs  params.rs
unoxidized/src/synth/soundfont/: loader.rs  noteon.rs  sfloader.rs
unoxidized/src/synth/voice_pool/: voice.rs
unoxidized/src/voice/: dsp_float.rs
