[package]
name = "oxisynth"
version = "0.0.5"
edition = "2018"

authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
description = "Rust soundfont synthesizer"
keywords = ["audio", "soundfont"]
license = "LGPL-2.1"
repository = "https://github.com/PolyMeilex/oxisynth"
documentation = "https://docs.rs/oxisynth"

[features]
# default=["sf3"]
i16-out = ["getrandom", "rand"]
sf3 = ["lewton"]

[dependencies]
oxisynth-chorus.workspace = true
oxisynth-reverb.workspace = true
soundfont.workspace = true
log.workspace = true

bitflags = "2.4"
byte-slice-cast = "1.0.0"
byteorder = "1.4.3"

# i16-out
getrandom = { version = "0.2", features = ["js"], optional = true }
rand = { version = "0.8.3", optional = true }

lewton = { version = "0.10.2", optional = true }
thiserror = "1.0.25"

[dev-dependencies]
env_logger = "0.10"
byte-slice-cast = "1.0.0"

[[example]]
name = "multi_font"
[[example]]
name = "polyphony"
[[example]]
name = "simple"
