[package]
name = "soundfont"
version = "0.0.3"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

description = "sf2 file parser"
keywords = ["sf2","soundfont"]
license = "MIT"
repository = "https://github.com/PolyMeilex/OxiSynth"
documentation = "https://docs.rs/soundfont"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.11.6"
